src/test/deca/codegen/valid/divideFloat.deca
// Description :
//   test de division d'un float par un float

// Résultats :
//   2.0
{
	float x = 1.0;
	float y = 2.0;
	float z = y/x;
	print(z);
}